--- a/src/Components/MuiNavbar.css
+++ b/src/Components/MuiNavbar.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
-    max-width: 100%;
+    max-width: 92%;
     flex-shrink: 0; /* Prevent content from wrapping */
     width: 100%; /* Set a width for the content container */
   }
@@ -18,3 +18,10 @@
     background: transparent;
   }
   
+
+  .forwardIcon {
+    position: absolute; 
+    top: 15px;
+    right: 30px;
+    z-index: 1;
+  }
